# GenAI_search_optimizer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  api.py  dashboard.py  pyproject.toml  run_api.bat  run_dashboard.bat  setup_windows.bat
