[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "geo-search-optimizer"
version = "1.0.0"
description = "A Claude Code-powered Generative Engine Optimization audit platform."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Chandan Gupta"}]
keywords = ["generative-ai", "geo", "seo", "claude", "fastapi", "streamlit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "fastapi>=0.115,<1",
  "streamlit>=1.36,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1", "httpx>=0.27,<1"]

[project.scripts]
geo-search = "geo_optimizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["geo_optimizer"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]
